Servidor de correo Creado

--- a/.env.copy
+++ b/.env.copy
@@ -1,2 +1,4 @@
-.env.copy
-mkwo bixe tpfj nett 
+SENDER_EMAIL_ADDRESS=user@gmail.com
+EMAIL_SMTP=smtp.gmail.com
+EMAIL_PASSWORD=
+PORT_EMAIL_STMP=587
