--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==3.6
 pycodestyle==2.11.1
 pydantic==2.6.4
 pydantic_core==2.16.3
+python-dotenv==1.0.1
 sniffio==1.3.1
 starlette==0.36.3
 tomli==2.0.1
